[gd_scene load_steps=10 format=2]

[ext_resource path="res://Asset/Font/jumper_number/jumperssemital.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene & Script/BattleSceneAnnouncement/BattleSceneAnnouncement.gd" type="Script" id=2]
[ext_resource path="res://Asset/Sound and Music/Sound/ReadyForTheBattle.wav" type="AudioStream" id=3]
[ext_resource path="res://Asset/Sound and Music/Music/Pre-Battle.wav" type="AudioStream" id=4]
[ext_resource path="res://Asset/Sound and Music/Sound/Fight.wav" type="AudioStream" id=5]
[ext_resource path="res://Asset/Sound and Music/Sound/GameOver.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "PostBattleScene"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("BattleSceneAnnouncement/Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 4, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -640, 178 ), Vector2( 0, 178 ), Vector2( 0, 178 ), Vector2( 640, 178 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleSceneAnnouncement/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleSceneAnnouncement/Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("BattleSceneAnnouncement")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_PostBattleScene"
}, {
"args": [ "GameOver" ],
"method": "_AnnoucementSound"
}, {
"args": [  ],
"method": "_nextRound"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "PreBattleScene"
length = 7.17
tracks/0/type = "value"
tracks/0/path = NodePath("BattleSceneAnnouncement/Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 6.6, 7.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -640, 178 ), Vector2( 0, 178 ), Vector2( 0, 178 ), Vector2( 640, 178 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleSceneAnnouncement/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleSceneAnnouncement/Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("BattleSceneAnnouncement")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_PreBattleScene"
}, {
"args": [ "Fight" ],
"method": "_AnnoucementSound"
} ]
}

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 1 )

[node name="BattleSceneAnnouncement" type="AnimationPlayer"]
anims/PostBattleScene = SubResource( 1 )
anims/PreBattleScene = SubResource( 2 )
script = ExtResource( 2 )

[node name="Panel" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
visible = false
margin_left = 640.0
margin_top = 178.0
margin_right = 1280.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 3 )
text = "Text"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound_and_Bgmusic" type="Node" parent="."]

[node name="PreBattleAudio" type="AudioStreamPlayer" parent="Sound_and_Bgmusic"]
stream = ExtResource( 4 )
volume_db = -5.474

[node name="ReadyForTheBattle_Announcement" type="AudioStreamPlayer" parent="Sound_and_Bgmusic"]
stream = ExtResource( 3 )
volume_db = -5.474

[node name="Fight_Announcement" type="AudioStreamPlayer" parent="Sound_and_Bgmusic"]
stream = ExtResource( 5 )
volume_db = -5.474

[node name="GameOver_Announcement" type="AudioStreamPlayer" parent="Sound_and_Bgmusic"]
stream = ExtResource( 6 )
volume_db = -5.474
